--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -85,8 +85,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Anita Zheng</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>She is currently studying for a master's degree in journalism and Communication in Nanjing University. In 2020,she graduated from Nankai University majoring in Radio and Television.Along with that ,she was also majoring in International Economics and Trade. She has worked for People's Daily, Ogilvy &amp; Mather, Tencent and Mango TV in the past.</strong><br>Her hobbies are watching science fiction movies, creating stage plays, writing stories, photographing, playing games and singing.<strong><br></strong></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="assets/files/CV-%E9%83%91%E9%9B%85%E6%96%87-20%E7%BA%A7%E6%96%B0%E4%BC%A0%E4%B8%93%E7%A1%95.pdf">CV</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">Video</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="assets/files/CV-郑雅文-20级新传专硕.pdf">CV</a></div>
             </div>
         </div>
     </div>
